Fix: fullscreen cut on tablet

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -5,9 +5,15 @@
     box-sizing: border-box;
 }
 
-body {
-    padding: 0;
-    margin: 0;
-    color: $neutral-color;
+body,
+html {
+    padding    : 0;
+    margin     : 0;
+    color      : $neutral-color;
     font-family: 'Roboto', sans-serif;
+    height     : 100%;
+}
+
+.App {
+    height: 100%;
 }
