--- a/frontend/src/views/main/Main.module.scss
+++ b/frontend/src/views/main/Main.module.scss
@@ -2,16 +2,16 @@
 
 .mainContainer {
     position        : relative;
-    width           : 100vw;
-    height          : 100vh;
+    width           : 100%;
+    height          : 100%;
     background-color: $secondary-color;
 
     .overlay {
         position      : fixed;
         display       : flex;
         flex-direction: column;
-        width         : 100vw;
-        height        : 100vh;
+        width         : 100%;
+        height        : 100%;
         top           : 0;
         left          : 0;
         z-index: 500;
@@ -25,7 +25,7 @@
             width              : 30%;
             max-width          : 600px;
             min-width          : 350px;
-            height             : calc(100vh - 150px);
+            height             : calc(100% - 150px);
             z-index            : 100;
             background-color   : $primary-color;
             box-shadow         : 4px -4px 10px 10px $shadow-color;
